appId: host.exp.Exponent
---
- launchApp

- tapOn:
    text: "Discover"

- tapOn:
    id: "discover-search-input"

- inputText: "Aventus"

- tapOn:
    index: 0
    text: "Aventus"

- tapOn:
    text: "Log a Wear"

- assertVisible:
    text: "LOG A WEAR"

- tapOn:
    text: "Casual"

- tapOn:
    text: "Save Wear"

- assertNotVisible:
    text: "LOG A WEAR"
